# fanyi-rs-demo

./: Cargo.toml  README.md
src/: action.rs  cli.rs  config.rs  lib.rs  main.rs
src/services/: baidu.rs  youdao.rs
