[package]
name = "fanyi"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
md5 = "0.7.0"
sha2 = "0.10.8"

[profile.release]
lto = true
opt-level = 3
